--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.0",
     "mongoose": "^5.8.9",
+    "mongoose-paginate-v2": "^1.4.1",
     "yup": "^0.28.0"
   },
   "devDependencies": {
