--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^3.5.0",
     "mongoose": "^5.8.9",
     "mongoose-paginate-v2": "^1.4.1",
+    "multer": "^1.4.3",
     "yup": "^0.28.0"
   },
   "devDependencies": {
